[gd_scene load_steps=18 format=3 uid="uid://c2xxt0wnr6t"]

[ext_resource type="Script" uid="uid://bwvtf3pgmssnd" path="res://scripts/LoadingScreen_Controller.gd" id="1_ca8dx"]
[ext_resource type="Texture2D" uid="uid://be8roslaanidt" path="res://assets/sprites/UI_images/UI_LoadingScreen_BG_PasilloParallax.png" id="2_25amj"]
[ext_resource type="Texture2D" uid="uid://7uafbik4q3v4" path="res://assets/sprites/UI_images/UI_LoadingScreen_BG_PuertaCerrada.png" id="3_bxo8q"]
[ext_resource type="Texture2D" uid="uid://ceilhq63fj8nh" path="res://assets/sprites/UI_images/UI_LoadingScreen_BAR_Progress_01.PNG" id="3_qf7q4"]
[ext_resource type="Texture2D" uid="uid://dh4ybfgtwblpw" path="res://assets/sprites/UI_images/UI_LoadingScreen_BG_PuertaRota.png" id="4_dsx8q"]
[ext_resource type="Texture2D" uid="uid://cxvhas8q1tfl6" path="res://assets/sprites/UI_images/UI_LoadingScreen_BG_Arma.png" id="5_815vh"]
[ext_resource type="Texture2D" uid="uid://cf3nofsqtvisf" path="res://assets/sprites/UI_images/UI_LoadingScreen_BAR_Progress_02.PNG" id="7_815vh"]
[ext_resource type="Texture2D" uid="uid://bu5bv0wj6k11h" path="res://assets/sprites/UI_images/UI_LoadingScreen_BAR_Progress_03.PNG" id="8_dkpuv"]
[ext_resource type="Texture2D" uid="uid://ds7g7732upp5p" path="res://assets/sprites/UI_images/UI_LoadingScreen_BAR_Progress_04.PNG" id="9_f0wew"]
[ext_resource type="Texture2D" uid="uid://xxk4ywhcsxen" path="res://assets/sprites/UI_images/UI_LoadingScreen_BG_Explosión01.png" id="10_vfet7"]
[ext_resource type="Texture2D" uid="uid://dxf31ikexg37j" path="res://assets/sprites/UI_images/UI_LoadingScreen_BG_Explosión02.png" id="11_nbpkh"]
[ext_resource type="Texture2D" uid="uid://bu3bxgmunnc5j" path="res://assets/sprites/UI_images/UI_LoadingScreen_BG_Explosión03.png" id="12_6qac0"]
[ext_resource type="AudioStream" uid="uid://i73oamchatla" path="res://assets/audio/SFX/ui-interface-shotgun.mp3" id="13_nbpkh"]

[sub_resource type="Animation" id="Animation_dkpuv"]
resource_name = "new_animation"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoadingBar:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6259, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_qf7q4"), ExtResource("7_815vh"), ExtResource("8_dkpuv"), ExtResource("9_f0wew")]
}

[sub_resource type="Animation" id="Animation_f0wew"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.45882353)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LoadingBar:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Gun:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Gun:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(662, 355)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Explosion:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Explosion:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BgHolder:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BgHolder:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_815vh"]
resource_name = "shoot_sequence"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.45882353), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LoadingBar:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Gun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.43333334, 0.76666665, 3.1666667),
"transitions": PackedFloat32Array(1, 27.857576, 22.627409),
"update": 0,
"values": [Vector2(662, 1000), Vector2(662, 355), Vector2(662, 1000)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Gun:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.13333334, 0.36666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Explosion:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.2666667, 2.3333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Explosion:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.3, 1.4666667, 1.6333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("10_vfet7"), ExtResource("11_nbpkh"), ExtResource("12_6qac0")]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.1666666, 1.5, 3.9),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"play_shot_sfx"
}, {
"args": [],
"method": &"break_door"
}, {
"args": [],
"method": &"go_to_next_scene"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BgHolder:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(3.1, 3.9333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("BgHolder:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(3.1, 3.9333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-200, -100)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vfet7"]
_data = {
&"RESET": SubResource("Animation_f0wew"),
&"new_animation": SubResource("Animation_dkpuv"),
&"shoot_sequence": SubResource("Animation_815vh")
}

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1925.0
offset_bottom = 1083.0
script = ExtResource("1_ca8dx")

[node name="BgHolder" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Pasillo" type="TextureRect" parent="BgHolder"]
layout_mode = 0
offset_left = 301.0
offset_top = 166.0
offset_right = 1665.0
offset_bottom = 952.0
texture = ExtResource("2_25amj")
expand_mode = 1
stretch_mode = 5

[node name="PuertaCerrada" type="TextureRect" parent="BgHolder"]
layout_mode = 0
offset_left = -148.0
offset_top = -24.0
offset_right = 2047.0
offset_bottom = 1256.0
texture = ExtResource("3_bxo8q")
expand_mode = 1
stretch_mode = 5

[node name="PuertaRota" type="TextureRect" parent="BgHolder"]
visible = false
layout_mode = 0
offset_left = -75.0
offset_top = -30.0
offset_right = 1980.0
offset_bottom = 1250.0
texture = ExtResource("4_dsx8q")
stretch_mode = 5

[node name="Explosion" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 418.0
offset_top = 31.0
offset_right = 1644.0
offset_bottom = 1022.0

[node name="Gun" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 662.0
offset_top = 355.0
offset_right = 1917.0
offset_bottom = 1227.0
texture = ExtResource("5_815vh")
expand_mode = 1
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.45882353)
self_modulate = Color(1, 1, 1, 0.4117647)
layout_mode = 0
offset_left = -51.0
offset_top = -51.0
offset_right = 2032.0
offset_bottom = 1287.0

[node name="LoadingBar" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 94.0
offset_top = 203.0
offset_right = 1895.0
offset_bottom = 1161.0
texture = ExtResource("3_qf7q4")
stretch_mode = 3

[node name="PressToContinue" type="Label" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 835.0
offset_right = 1145.0
offset_bottom = 876.0
text = "PULSA UNA TECLA PARA CONTINUAR"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vfet7")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ShotSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_nbpkh")
volume_db = -5.76

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
